--- a/static/html/index.html
+++ b/static/html/index.html
@@ -6,12 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href='/static/css/tickles-main.css' crossorigin="anonymous">
-    <title>Ad server test</title>
 </head>
 
 <body>
-    <h3>Test iframe</h3>
-    <p>I will be going home tonight, I will pass over and take supper.</p>
+    <div class="preloader">
+        <div class="spinner">
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+            <div class="rect5"></div>
+        </div>
+    </div>
+    <div class="ad-container">
+        <div class="help" title="Get help with this ad">&#63;</div>
+        <div class="close" title="Close ad">&times;</div>
+        <div>
+            <h3>some random text</h3>
+            <p>Some other description text might appear here.</p>
+        </div>
+    </div>
 </body>
+<script src="/resources/js/tickles-modular.js"></script>
 
 </html>
