--- a/static/html/index.html
+++ b/static/html/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/static/css/animate.css">
+    <link rel="stylesheet" href="/static/css/materialdesignicons.css">
     <link rel="stylesheet" href='/static/css/tickles-main.css' crossorigin="anonymous">
 </head>
 
@@ -21,9 +23,9 @@
     <div class="ad-container">
         <div class="help" title="Get help with this ad">&#63;</div>
         <div class="close" title="Close ad">&times;</div>
-        <div>
-            <h3>some random text</h3>
-            <p>Some other description text might appear here.</p>
+        <div class="ad-elements"> </div>
+        <div class="company-logo">
+            <span>Tickles Ads. Powered by Tickles</span>
         </div>
     </div>
 </body>
